--- a/style.css
+++ b/style.css
@@ -41,9 +41,9 @@ body{
   #player-el{
     margin-top:15px;
     font-size: large;
-    background-color: #0c542d;
+   /*  background-color: #0c542d;
     width: 150px;
    margin: 0 auto;
-   margin-top: 10px;
+   margin-top: 10px; */
   
   }
